--- a/src/components/AboutUs/AboutUs.scss
+++ b/src/components/AboutUs/AboutUs.scss
@@ -7,8 +7,8 @@
   border-radius: 0px;
   background-repeat: no-repeat;
   background-size: contain;
-  min-width: 320px;
-  min-height: 220px;
+  width: 320px;
+  height: 220px;
   display: flex;
   justify-content: center;
   align-items: center;
