--- a/src/components/CallbackForm/CallbackForm.scss
+++ b/src/components/CallbackForm/CallbackForm.scss
@@ -4,9 +4,11 @@
   background-color: #F4F4F4;
   @media screen and (min-width: 768px) {
     padding: 32px;
+    margin-bottom: 40px;
   }
   @media screen and (min-width: 1360px) {
     padding: 56px 20px 77px;
+    margin-bottom: 0px;
   }
 };
 
