--- a/src/components/Team/Team.scss
+++ b/src/components/Team/Team.scss
@@ -7,94 +7,94 @@
   @media screen and (min-width: 1360px) {
     padding: 80px 28px 58px;
   }
-};
+}
 
 .section-team {
   font-family: 'Open Sans';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 22px;
-text-align: center;
-color: #333333;
-@media screen and (min-width: 768px) {
-  font-size: 20px;
-line-height: 33px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  text-align: center;
+  color: #333333;
+  @media screen and (min-width: 768px) {
+    font-size: 20px;
+    line-height: 33px;
+  }
+  @media screen and (min-width: 1360px) {
+    line-height: 27px;
+  }
 }
-@media screen and (min-width: 1360px) {
-line-height: 27px;
-}
-};
 
 .section-team__title {
   font-family: 'Open Sans';
-font-style: normal;
-font-weight: 400;
-font-size: 32px;
-line-height: 44px;
-text-align: center;
-margin-top: 16px;
-color: #333333;
-@media screen and (min-width: 768px) {
-  font-size: 40px;
-line-height: 54px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 44px;
+  text-align: center;
+  margin-top: 16px;
+  color: #333333;
+  @media screen and (min-width: 768px) {
+    font-size: 40px;
+    line-height: 54px;
+  }
 }
-};
 
 .section-team__text {
   font-family: 'Open Sans';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 22px;
-text-align: center;
-margin: 24px 0px 63px;
-color: #333333;
-@media screen and (min-width: 768px) {
-  font-size: 18px;
-line-height: 25px;
-margin: 24px 0px 24px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  text-align: center;
+  margin: 24px 0px 63px;
+  color: #333333;
+  @media screen and (min-width: 768px) {
+    font-size: 18px;
+    line-height: 25px;
+    margin: 24px 0px 24px;
+  }
+  @media screen and (min-width: 1360px) {
+    margin: 24px 0px 36px;
+  }
 }
-@media screen and (min-width: 1360px) {
-margin: 24px 0px 36px;
-}
-};
 
 .section-team__name {
   font-family: 'Open Sans';
-font-style: normal;
-font-weight: 400;
-font-size: 20px;
-line-height: 27px;
-text-align: center;
-margin-top: 16px;
-color: #333333;
-@media screen and (min-width: 768px) {
- margin-top: 18px;
- font-size: 32px;
-line-height: 32px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 27px;
+  text-align: center;
+  margin-top: 16px;
+  color: #333333;
+  @media screen and (min-width: 768px) {
+    margin-top: 18px;
+    font-size: 32px;
+    line-height: 32px;
+  }
+  @media screen and (min-width: 1360px) {
+    margin-top: 15px;
+  }
 }
-@media screen and (min-width: 1360px) {
-margin-top: 15px;
-}
-};
 
 .section-team__employee {
   font-family: 'Open Sans';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 22px;
-margin: 8px 0px 30px;
-text-align: center;
-color: #333333;
-@media screen and (min-width: 768px) {
-  font-size: 18px;
-  line-height: 25px;
- }
-};
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  margin: 8px 0px 30px;
+  text-align: center;
+  color: #333333;
+  @media screen and (min-width: 768px) {
+    font-size: 18px;
+    line-height: 25px;
+  }
+}
 
-.grid-photo7{
+.grid-photo7 {
   background-image: url(../img/Team1-mobile.jpg);
   background-repeat: no-repeat;
   background-size: contain;
@@ -103,33 +103,45 @@ color: #333333;
   margin: auto;
   position: relative;
   @media screen and (min-device-pixel-ratio: 2),
-  screen and (min-resolution: 192dpi),
-  screen and (min-resolution: 2dppx) {
-  background-image: url('../img/Team1-mobile2x.jpg');
-}
-@media screen and (min-width: 768px) {
-  background-image: url(../img/Team1-laptop.jpg);
-  width: 223px;
-  min-height: 148px;
-  @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
-    background-image: url('../img/Team1-laptop2x.jpg');
+    background-image: url('../img/Team1-mobile2x.jpg');
+  }
+  @media screen and (min-width: 768px) {
+    background-image: url(../img/Team1-laptop.jpg);
+    width: 223px;
+    min-height: 148px;
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url('../img/Team1-laptop2x.jpg');
+    }
+  }
+  @media screen and (min-width: 1360px) {
+    background-image: url(../img/Team1-desktop.jpg);
+    width: 420px;
+    min-height: 287px;
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url('../img/Team1-desktop2x.jpg');
+    }
   }
 }
-@media screen and (min-width: 1360px) {
-  background-image: url(../img/Team1-desktop.jpg);
-  width: 420px;
-  min-height: 287px;
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
-    background-image: url('../img/Team1-desktop2x.jpg');
-  }
-}
-};
 
-.grid-photo8{
+.grid-photo7:hover {
+  cursor: pointer;
+  -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.02);
+  transition: transform 1.5s;
+  box-shadow: 0px 1px 5px rgba(198, 199, 197, 0.939),
+    0px 3px 4px rgba(171, 171, 171, 0.946),
+    0px 2px 4px rgba(202, 188, 188, 0.836);
+  filter: brightness(0.7);
+}
+
+.grid-photo8 {
   background-image: url(../img/Team2-mobile.jpg);
   background-repeat: no-repeat;
   background-size: contain;
@@ -138,33 +150,45 @@ color: #333333;
   margin: auto;
   position: relative;
   @media screen and (min-device-pixel-ratio: 2),
-  screen and (min-resolution: 192dpi),
-  screen and (min-resolution: 2dppx) {
-  background-image: url('../img/Team2-mobile2x.jpg');
-}
-@media screen and (min-width: 768px) {
-  background-image: url(../img/Team2-laptop.jpg);
-  width: 223px;
-  min-height: 148px;
-  @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
-    background-image: url('../img/Team2-laptop2x.jpg');
+    background-image: url('../img/Team2-mobile2x.jpg');
+  }
+  @media screen and (min-width: 768px) {
+    background-image: url(../img/Team2-laptop.jpg);
+    width: 223px;
+    min-height: 148px;
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url('../img/Team2-laptop2x.jpg');
+    }
+  }
+  @media screen and (min-width: 1360px) {
+    background-image: url(../img/Team2-desktop.jpg);
+    width: 420px;
+    min-height: 287px;
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url('../img/Team2-desktop2x.jpg');
+    }
   }
 }
-@media screen and (min-width: 1360px) {
-  background-image: url(../img/Team2-desktop.jpg);
-  width: 420px;
-  min-height: 287px;
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
-    background-image: url('../img/Team2-desktop2x.jpg');
-  }
-}
-};
 
-.grid-photo9{
+.grid-photo8:hover {
+  cursor: pointer;
+  -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.02);
+  transition: transform 1.5s;
+  box-shadow: 0px 1px 5px rgba(198, 199, 197, 0.939),
+    0px 3px 4px rgba(171, 171, 171, 0.946),
+    0px 2px 4px rgba(202, 188, 188, 0.836);
+  filter: brightness(0.7);
+}
+
+.grid-photo9 {
   background-image: url(../img/Team3-mobile.jpg);
   background-repeat: no-repeat;
   background-size: contain;
@@ -173,28 +197,69 @@ color: #333333;
   margin: auto;
   position: relative;
   @media screen and (min-device-pixel-ratio: 2),
-  screen and (min-resolution: 192dpi),
-  screen and (min-resolution: 2dppx) {
-  background-image: url('../img/Team3-mobile2x.jpg');
-}
-@media screen and (min-width: 768px) {
-  background-image: url(../img/Team3-laptop.jpg);
-  width: 223px;
-  min-height: 148px;
-  @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
-    background-image: url('../img/Team3-laptop2x.jpg');
+    background-image: url('../img/Team3-mobile2x.jpg');
+  }
+  @media screen and (min-width: 768px) {
+    background-image: url(../img/Team3-laptop.jpg);
+    width: 223px;
+    min-height: 148px;
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url('../img/Team3-laptop2x.jpg');
+    }
+  }
+  @media screen and (min-width: 1360px) {
+    background-image: url(../img/Team3-desktop.jpg);
+    width: 420px;
+    min-height: 287px;
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url('../img/Team3-desktop2x.jpg');
+    }
   }
 }
-@media screen and (min-width: 1360px) {
-  background-image: url(../img/Team3-desktop.jpg);
-  width: 420px;
-  min-height: 287px;
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
-    background-image: url('../img/Team3-desktop2x.jpg');
+
+.grid-photo9:hover {
+  cursor: pointer;
+  -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.02);
+  transition: transform 1.5s;
+  box-shadow: 0px 1px 5px rgba(198, 199, 197, 0.939),
+    0px 3px 4px rgba(171, 171, 171, 0.946),
+    0px 2px 4px rgba(202, 188, 188, 0.836);
+  filter: brightness(0.7);
+}
+
+.grid-item {
+  display: block;
+  text-align: center;
+  position: relative;
+}
+
+.grid-item .svg {
+  opacity: 0;
+  position: absolute;
+  bottom: 55%;
+  left: 50%;
+  transform: translate(-50%, 0);
+  transition: 0.5s;
+  width: 98%;
+  padding: 10px 5px;
+  @media screen and (min-width: 768px) {
+    bottom: 60%;
   }
 }
-};
+.grid-item:hover .svg {
+  opacity: 1;
+}
+
+.svg {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
