--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,7 +4,7 @@
   border-radius: 0px;
   background-repeat: no-repeat;
   background-size: cover;
-  min-width: 320px;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
